<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/settings_permissions_header">

        <Preference
            app:key="access_overlay_perms"
            app:title="@string/settings_overlay_permissions_title"
            app:summary="@string/settings_overlay_permissions_summary" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="Access from other sites"
        app:summary="Allow access from an external site">

        <EditTextPreference
            app:dialogMessage="Enter the hostname you want to allow access from."
            app:dialogTitle="Enter CORS Host"
            app:key="cors_host"
            app:title="CORS Host"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settings_other_header">

        <ListPreference
            app:key="forvo_language"
            app:title="@string/settings_forvo_language_title"
            app:summary="@string/settings_forvo_language_summary"
            android:dialogTitle="@string/settings_forvo_language_dialog_title"
            android:defaultValue="ja"
            android:entries="@array/forvo_language_entries"
            android:entryValues="@array/forvo_language_values" />

        <ListPreference
            app:key="storage_location"
            app:title="@string/settings_preferred_storage_location_title"
            app:summary="@string/settings_preferred_storage_location_summary"/>
        <Preference
            app:key="get_dir_path"
            app:title="@string/get_dir_path_title"
            app:summary="@string/get_dir_path_title_summary" />

    </PreferenceCategory>
</PreferenceScreen>